--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=DEBUG,INFO,WARN,ERROR
 log4j.appender.INFO=org.apache.log4j.ConsoleAppender 
 log4j.appender.INFO.Threshold=INFO
 log4j.appender.INFO.layout=org.apache.log4j.PatternLayout     
-log4j.appender.INFO.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH\:mm\:ss} %c{1} %m%n
+log4j.appender.INFO.layout.ConversionPattern=[Snake] [%p] %d{yyyy-MM-dd HH\:mm\:ss} %c{1} %m%n
 
 log4j.appender.ERROR=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ERROR.Threshold=WARN
@@ -12,4 +12,4 @@ log4j.appender.ERROR.File=${catalina.base}/logs/error.log
 log4j.appender.ERROR.MaxFileSize=5120KB 
 log4j.appender.ERROR.MaxBackupIndex=10  
 log4j.appender.ERROR.layout=org.apache.log4j.PatternLayout  
-log4j.appender.ERROR.layout.ConversionPattern=[%p] %d | %m | [%t] %C.%M(%L)%n
+log4j.appender.ERROR.layout.ConversionPattern=[Snake] [%p] %d | %m | [%t] %C.%M(%L)%n
